						Changed the 'ClaimedBy' column to 16 characters.
						Changed the 'CompletedBy' column to 16 characters.
	3.1.6	6/20/2014
				Fixed a null pointer exception when trying to match a name to an offline player.
	3.1.7	7/4/2014
				Database Changes:
					Changed the 'Sender' column to 32 characters.
					Changed the 'Reported' column to 32 characters.
					Changed the 'ClaimedBy' column to 32 characters.
					Changed the 'CompletedBy' column to 32 characters.
					Changed the 'Date' column from a VARCHAR type to a CHAR type.
					Changed the 'SenderUUID' column from a VARCHAR type to a CHAR type.
					Changed the 'ReportedUUID' column from a VARCHAR type to a CHAR type.
					Changed the 'ClaimedByUUID' column from a VARCHAR type to a CHAR type.
					Changed the 'CompletedByUUID' column from a VARCHAR type to a CHAR type.
					Changed the 'ClaimedDate' column from a VARCHAR type to a CHAR type.
					Changed the 'CompletionDate' column from a VARCHAR type to a CHAR type.
	3.1.8	8/1/2014
				Fixed trying to find a player even if the username is invalid.
	3.1.9	8/13/2014
				Increased efficiency of getting players.
				New Configuration Option:
					general.matchPartialOfflineUsernames - If the plugin should attempt to match a partial username to an offline player.
	3.2
				Features:
					An alert will be sent when a reported player from an unfinished report logs in.
					Added a statistics system.
				Changes:
					A message of how many reports were deleted is displayed when deleting groups of reports.
					Database:
						Created a PlayerStats table.
						Created a ModStats table.
				New Commands:
					/report statistic/stat list
					/report statistic/stat <Player Name> <Statistic>
					/report statistic/stat <Player Name> all
					/report statistic/stat <Player Name> all mod|player
				New Permission Nodes:
					reporter.alerts.onLogin.reportedPlayerLogin
					reporter.statistic.list
					reporter.statistic.read.mod
					reporter.statistic.read.player